k8s/springboot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolistwebapp
spec:
  selector:
    matchLabels:
      app: todolistwebapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todolistwebapp
    spec:
      containers:
        - image: ctornau/todolistwebapp:latest
          name: todolistwebapp
          ports:
          - containerPort: 8080
            protocol: TCP
