k8s/springboot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolistwebapp
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: todolistwebapp
  clusterIP: None
